2001-08-15  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>

	* testsuite/18_support/numeric_limits.cc: Add more tests.
	* include/bits/std_limits.h (numeric_limits<char>::max): Fix
	typo. 

2001-08-14  Ulrich Weigand  <uweigand@de.ibm.com>
 
	* configure.target (cpu_include_dir): Set to `config/cpu/s390'
	for s390 and s390x.
 
	* config/cpu/s390/bits/atomicity.h: New.

2001-08-14  Gabriel Dos Reis  <gdr@codesourcery.com>

	* include/bits/std_limits.h: Fix thinko.

2001-08-14  Benjamin Kosnik  <bkoz@redhat.com>

	* include/Makefile.am: Consolidate target rules. Don't clean stamp
	files. Tweak target build directory stamp.
	* include/Makefile.in: Regenerate.
	
2001-08-14  Peter Schmid  <schmid@snake.iap.physik.tu-darmstadt.de>

	* libstdc++-v3/libmath/stubs.c: Fix PR/3988, replace
	_GBLICPP_HAVE_LOGL with HAVE_LOGL

2001-08-13  Benjamin Kosnik  <bkoz@redhat.com>

	* configure.in (libtool_VERSION): Add.
	(VERSION): Change to 
	(release_VERSION): This.
	* configure: Regenerate.	
	* src/Makefile.am (libstdc___la_LDFLAGS): Use -version-info with
	libtool_VERSION.
	* src/Makefile.in: Regenerate.

	* intl/Makefile.am: Remove.
	* intl/Makefile.in: Remove.
	* intl: Remove.
	* Makefile.am (SUBDIRS): Remove intl.
	* po/Makefile.am (DISTFILES): Add string_literals.cc
	(MSGFMT): Add.
	* po/string_literals.cc: Add.
	* po/POTFILES.in: Fix path.
	* acinclude.m4 (GLIBCPP_ENABLE_CLOCALE): Don't call AM_GNU_GETTEXT. 
	* aclocal.m4: Regenerate.
	* configure.in: Remove AC_OUTPUT of intl/Makefile.
	
	* include/backward/backward_warning.h: Clarify message.

	* testsuite_flags.in (--cxxflags): Use same debug flags for
	library and testsuite.

	* include/Makefile.am (c_compatibility): Remove.
	* include/Makefile.in: Regenerate.
	
2001-08-13  Mark Mitchell  <mark@codesourcery.com>

	* configure.in (LIMITS_INC_SRCDIR): New variable.
	* configure.target (LIMITSH): New variable.
	* porting.texi: Discuss numeric limits.
	* config/cpu/generic/bits/limits.h: New file.